--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .idea/deployment.xml
+.idea/workspace.xml
 .idea/misc.xml
+.idea/dictionaries
+.idea/libraries
+
+# Python virtual environment
+venv/
